add_library(
    extractor_obj
    STATIC
    "book_build.cpp"
	"call_obj.cpp"
	"call_stack.cpp"
	"comp.cpp"
	"comp_def.cpp"
	"comp_def_simp.cpp"
	"comp_graph.cpp"
	"comp_sys.cpp"
	"csv_play.cpp"
    "csv_record.cpp"
    "csv_tail.cpp"
    "cumulative.cpp"
	"unique.cpp"
	"exec_ctx.cpp"
	"frame.cpp"
	"stream_ctx.cpp"
	"type_decl.cpp"
	"type_error.cpp"
	"type_space.cpp"
	"type_sys.cpp"
    "split.cpp"
    "identity.cpp"
    "mp_play.cpp"
    "mp_record.cpp"
    "book/book.cpp"
    "bbo_book_aggr.cpp"
    "bbo_aggr.cpp"
    "book_play_split.cpp"
    "ore_live_split.cpp"
    "seq_ore_live_split.cpp"
    "ore_sim_split.cpp"
    "book_msg.cpp"
    "book_trades.cpp"
    "book_header.cpp"
    "book_vendor_time.cpp"
    "std_comp.cpp"
    "tick_lag.cpp"
    "time_lag.cpp"
    "field.cpp"
    "combine.cpp"
    "diff.cpp"
    "divide.cpp"
    "convert.cpp"
    "join.cpp"
    "trigger.cpp"
    "mm_file.cpp"
    "arg_stack.cpp"
    "arg_serial.cpp"
    "frame_serial.cpp"
    "comp_sys_capture.cpp"
    "comp_sys_serialize.cpp"
    "comp_sys_module.cpp"
    "equal.cpp"
    "not_equal.cpp"
    "greater.cpp"
    "greater_equal.cpp"
    "less.cpp"
    "less_equal.cpp"
    "filter_unless.cpp"
    "filter_if.cpp"
    "logical_and.cpp"
    "logical_or.cpp"
    "logical_not.cpp"
    "find_substr.cpp"
    "substr.cpp"
    "constant.cpp"
    "cond.cpp"
    "add.cpp"
    "sum.cpp"
    "mult.cpp"
    "ln.cpp"
    "log.cpp"
    "exp.cpp"
    "pow.cpp"
    "max.cpp"
    "min.cpp"
    "count.cpp"
    "nano.cpp"
    "module.cpp"
    "accumulate.cpp"
    "fields.cpp"
    "nan.cpp"
    "zero.cpp"
    "is_zero.cpp"
    "is_nan.cpp"
    "is_inf.cpp"
    "perf_timer.cpp"
    "split_by.cpp"
    "frame_ytp_encode.cpp"
    "frame_ytp_decode.cpp"
    "ore_ytp_decode.cpp"
    "decode_data.cpp"
    "decode_receive.cpp"
    "timeout.cpp"
    "delayed.cpp"
    "heartbeat.cpp"
    "ytp_sequence.cpp"
    "round.cpp"
)
target_link_libraries(
    extractor_obj
    PUBLIC
    fmc++
    ytp
)
target_include_directories(
    extractor_obj
    PUBLIC
    "${EXTRACTOR_INC_DIR}"
    "${EXTRACTOR_SRC_DIR}"
)

add_library(
    extractor_dep
    INTERFACE
)
target_link_libraries(
    extractor_dep
    INTERFACE
    fmc++
    ytp
)
target_include_directories(
    extractor_dep
    INTERFACE
    "${EXTRACTOR_INC_DIR}"
)

add_library(
    extractor
    SHARED
    $<TARGET_OBJECTS:extractor_obj>
)
target_link_libraries(
    extractor
    PRIVATE
    extractor_dep
)
set_target_properties(
    extractor
    PROPERTIES
    OUTPUT_NAME "extractor"
    LIBRARY_OUTPUT_DIRECTORY "${WHEEL_extractor_BUILD_DIR}/dist/extractor"
)
install(
    TARGETS
    extractor
)
